--- a/app/assets/stylesheets/_userprofile.css.scss
+++ b/app/assets/stylesheets/_userprofile.css.scss
@@ -166,7 +166,7 @@
     background-image: image-url("topic.jpeg");
   }
   .G2 {
-    background-image: image-url("scarf.jpeg");
+    background-image: image-url("pitching-article.jpg");
   }
   .G3 {
     background-image: image-url("writing.jpg");
@@ -175,7 +175,7 @@
     background-image: image-url("glasses.jpeg");
   }
   .G5 {
-    background-image: image-url("photo.jpeg");
+    background-image: image-url("image-policy.jpg");
   }
 }
 
