--- a/app/views/applies/editor.html.erb
+++ b/app/views/applies/editor.html.erb
@@ -77,7 +77,7 @@
         <%= f.file_field :resume, id: "pdf-file-resume" %>
       </div>
       <% end %>
-      <p>Give one piece of feedback for each of the published articles below. What, if anything, is the writer missing from <a target="_blank" href="/writing-the-perfect-article#article-requirements">these questions</a>?</p>
+      <p>Give one piece of feedback for each of the published articles below. What, if anything, is the writer missing from <a target="_blank" href="/pages/writing-an-article#article-requirements">these questions</a>?</p>
       <p>1. <%= link_to "Is Private School Or Public School Better for You?", "https://www.theteenmagazine.com/is-private-school-or-public-school-better-for-you", target: "_blank" %></p>
       <p>2. <%= link_to "Rejection Sensitivity: Causes and How to Cope, for Teenagers", "https://www.theteenmagazine.com/rejection-sensitivity-causes-and-how-to-cope-for-teenagers", target: "_blank" %></p>
       <p>3. <%= link_to "Fall Fashion Staples You Must Have in Your Wardrobe", "https://www.theteenmagazine.com/fall-fashion-staples-you-must-have-in-your-wardrobe", target: "_blank" %></p>
@@ -86,7 +86,7 @@
       <p>Choose one or two paragraphs from one of the articles above to edit. Revise the paragraph(s) to the best of your ability. Do not worry about making too many changes; the purpose of this exercise is to see what you notice can be improved in other's writing. Paste the unedited paragraph(s) above your revision.</p>
       <%= f.text_area :editor_revision, placeholder: "Write your revision here...", class: "required" %>
 
-      <p class="mt-3">Finally, pitch three new topics that would fit The Teen Magazine's audience as described <a target="_blank" href="/choosing-a-topic">here</a>. Include the title and description you would use.</p>
+      <p class="mt-3">Finally, pitch three new topics that would fit The Teen Magazine's audience as described <a target="_blank" href="/pages/content-policy">here</a>. Include the title and description you would use.</p>
       <i>Example:</i><br>
       <i>Pitch 1 Title: The Stages of All High School Relationships from an Outsider</i><br>
       <i>Pitch 1 Description: Are you always the friend that gives advice but are never in the relationship? Share your perspective from the outside-in. What do you notice in all your friends' relationships in high school? Do they have a similar pattern? How long do they last and what are those stages? Have fun with it!</i>
