--- a/app/views/constants/new.html.erb
+++ b/app/views/constants/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page skinny_wrapper wrapper_padding">
   <h3 class="text-left mt-4 ml-0 mb-4">New Constant</h3>
-  <i style="background-color: #FCD04D">Constant fields are variables that are able to be updated by admins in the application. These could be monthly quotas, boolean values to turn on/off deadlines, max review count, etc.. A developer is needed to use a new variable in the application.</i>
+  <i style="background-color: yellow">Constant fields are variables that are able to be updated by admins in the application. These could be monthly quotas, boolean values to turn on/off deadlines, max review count, etc.. A developer is needed to use a new variable in the application.</i>
   <br>
   <br>
   <%= render "/constants/form" %>
