--- a/app/views/feedbacks/edit.html.erb
+++ b/app/views/feedbacks/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="page skinny_wrapper wrapper_padding">
   <br>
-  <i style="background-color: #FCD04D">(For admins only) If you think this feedback field can be more helpful, please update it here. Be as descriptive as possible
+  <i style="background-color: yellow">(For admins only) If you think this feedback field can be more helpful, please update it here. Be as descriptive as possible
     while keeping the feedback generic so that it can be used for other articles. Remember that as soon as you save, the feedback form
     will be updated for all editors.</i>
   <br><br>
