--- a/app/views/newsletters/featured.html.erb
+++ b/app/views/newsletters/featured.html.erb
@@ -42,7 +42,7 @@
             <% end %>
           </div>
           <% if @query.present? %>
-            <h2>Search for article... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+            <h2>Search for article... <span style="background-color: yellow"><%= @query %></span></h2>
             <br>
           <% end %>
           <% if @posts.present? %>
