--- a/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
+++ b/app/views/pages/editor_partials/_pitching_new_articles_content.html.erb
@@ -53,7 +53,7 @@
 <p>It's important that when you create a title using one of the above structures, you also use some emotionally charged adjectives and/or phrases. The diagram below shows the top headline phrases used in viral content. Many of these serve to stir curiosity and/or directly address the reader.</p>
 <%= image_tag("headlines.jpg", class: "image_fit_scrn") %>
 
-<p>In order to test if your title is emotional, you should type it into this free online tool: <a target="_blank" href="https://aminstitute.com/headline/">https://aminstitute.com/headline/</a>. <span style="background-color: #FCD04D;">Your headline should be anywhere above 30 on the scale for it to be considered shareable.</span></p>
+<p>In order to test if your title is emotional, you should type it into this free online tool: <a target="_blank" href="https://aminstitute.com/headline/">https://aminstitute.com/headline/</a>. <span style="background-color: yellow;">Your headline should be anywhere above 30 on the scale for it to be considered shareable.</span></p>
 
 <h5 id="Searchable">How to write searchable titles:</h5>
 
@@ -103,7 +103,7 @@
 <p>You'll likely have to change around your title 5-10 times before you have one that is clear and concise, evokes curiosity, and is on a topic teens are searching. Of course, there are always exceptions to the rules but the majority of your pitched article titles should meet these criteria.</p>
 
 <h5>Choosing a thumbnail</h5>
-<p>IMPORTANT: Read <a target="_blank" href="/finding-images">Image Policy</a> first to make sure you are Image Policy safely!</p>
+<p>IMPORTANT: Read <a target="_blank" href="/pages/image-policy">Image Policy</a> first to make sure you are Image Policy safely!</p>
 <p>Once you've found some images that are royalty free, there are a few tricks to know for choosing a catchy thumbnail image. These are suggestions to keep in mind, not the rule. There are plenty of great thumbnail images that do not adhere to these observations.</p>
 <ul>
   <li>BuzzFeed found that color images relay information faster than black and white ones and so they also perform better.</li>
