--- a/app/views/pages/editor_partials/_reviewing_articles_content.html.erb
+++ b/app/views/pages/editor_partials/_reviewing_articles_content.html.erb
@@ -4,7 +4,8 @@
 <p><span class="highlight">Use the following criteria to critique the article and determine if it needs to be sent back for changes or can be published. You should be able to answer yes to all of the following requirements for an article to be approved.</span></p>
 <div style="border: 3px solid #F0255E; padding: 20px;">
   <p class="mt-0">Copied from <a target="_blank" href="/pitch-requirements">Reviewing Pitches</a> —</p>
-  <h3 id="first-question">1. Is the topic relevant to The Teen Magazine's audience?</h3>
+  <h3 id="first-question">1. Does the writing reflect the tone and voice of The Teen Magazine?</h3>
+  <div class="alert alert-info"><p>Make sure you've read <a href="/pages/content-policy"><b>The Teen Magazine's Content Policy</b></a> before reading further.</p></div>
   <p>
     An article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already.
   </p>
@@ -14,7 +15,7 @@
   </p>
 
   <p>
-    Email Mia at mia@theteenmagazine.com if you are still unsure about a certain article's relevancy.
+    Post on Discord in the <b>#editors-chat</b> if you are still unsure about a certain article's relevancy.
   </p>
 
   <h3 id="second-question">2. Is the title searchable and/or shareable?</h3>
@@ -41,7 +42,7 @@
 <p>
   On average, the amount of time a writer has to keep a reader around is 3-5 seconds. The graphic below shows how the attention span of the average internet-user has decreased dramatically in the past couple decades.
 </p>
-<div style="border: 3px solid #FCD04D;">
+<div style="border: 3px solid yellow;">
   <%= image_tag("attention.png", class: "image_fit_scrn") %>
 </div>
 <p>The introduction to every article should be written clearly and in a way that does not leave you wondering what the point of the article is, what the article will cover, to whom this article will be useful to, and why you should care.</p>
@@ -52,7 +53,7 @@
   <li>A sentence summarizing the main point of the article.</li>
 </ul>
 <p>The below image is an example of a great introduction from  <a target="_blank" href="https://www.theteenmagazine.com/this-positive-affirmation-playlist-makes-me-crush-my-goals-every-time-i-run">this article</a>. It succeeds in keeping the reader interested through an interesting hook and establishing a clear direction for the article that is <i>in line with the title</i> within the first few paragraphs.</p>
-<div style="border: 3px solid #FCD04D;" class="mb-4">
+<div style="border: 3px solid yellow;" class="mb-4">
   <%= image_tag("introduction.png", class: "image_fit_scrn") %>
 </div>
 <p>Remember that any grammatical mistakes, unclear wording, and/or too much irrelevant information will cause the reader to click away. Additionally, if the introduction is not what the reader had expected based off of the title, the reader will also click away. The introduction is one of the most important parts of the article and should be scrutinized during the editing process. If the introduction doesn't meet these requirements, mark "Introduction needs to be improved" on the editor form, and send the article back for changes.</p>
@@ -80,8 +81,8 @@
 </p>
 <p>As a rule of thumb, an article should be around 1000 words on <a target="_blank" href="https://wordcounter.net/">https://wordcounter.net/</a> but this is not set in stone. Use your judgement to determine if the average reader will be satisfied given the information. What could the writer still expand upon? If the answer to this question is important to the topic, mark "Article is too short" and explain why in the Notes field.</p>
 
-<h3 id="ninth-question">9. Are all images given proper attribution and are taken from ok sites as explained in the <a target="_blank" href="/finding-images">Image Policy</a>?</h3>
+<h3 id="ninth-question">9. Are all images given proper attribution and are taken from ok sites as explained in the <a target="_blank" href="/pages/image-policy"><b>Image Policy</b></a>?</h3>
 
-<p>All images should follow the <a target="_blank" href="/finding-images">Image Policy</a>.</p>
+<p>All images should follow the <a target="_blank" href="/pages/image-policy"><b>Image Policy</b></a>.</p>
 
 <p>If you've reached the end of this list and answered "yes" to all of the questions, you may publish the article on The Teen Magazine.</p>
