--- a/app/views/pages/images.html.erb
+++ b/app/views/pages/images.html.erb
@@ -10,7 +10,7 @@
  This is handled automatically for you when you upload images from The Teen Magazine's asset library. 
 <%
 =end%>
-      <span style="background-color: #FCD04D">Use a link back to the original image (if possible) and include the name of the copyright owner (see example)</span>.
+      <span style="background-color: yellow">Use a link back to the original image (if possible) and include the name of the copyright owner (see example)</span>.
     </li>
     
     <h3 class="mt-3">Format for citing articles that you have uploaded to The Teen Magazine server:</h3>
@@ -50,7 +50,7 @@
             <h3>***Pinterest is NOT an ok site to get images from! If you have images on your articles that you have cited from Pinterest, you must remove them.***</h3>
     </li>
     <li>
-      <b class="text-decoration-underline">Consequences for not adhering to this policy</b>: <span style="background-color: #FCD04D">If you wrongly accept this policy from the date hereof without adhering to the rules in this image policy, your writer account will be suspended and your article will be unpublished.
+      <b class="text-decoration-underline">Consequences for not adhering to this policy</b>: <span style="background-color: yellow">If you wrongly accept this policy from the date hereof without adhering to the rules in this image policy, your writer account will be suspended and your article will be unpublished.
       If you accepted the old image policy before it was updated, you are still responsible for updating your articles, you have until <b>10/31/23</b> to comply with the new policy.</span> After that, images in your articles may be deleted by editors, and in some cases, your article(s) will be unpublished. 
   </ul>
   <p>
