--- a/app/views/pages/writing.html.erb
+++ b/app/views/pages/writing.html.erb
@@ -2,7 +2,7 @@
   <h1 id="page_title_padded">Writing The Perfect Article</h1>
   <h3>Starting a Draft</h3>
   <p>
-    To start an article, either pitch your own topic (follow the guidelines <a href="/choosing-a-topic" target="_blank">Here</a>), or choose from the existing editor pitches <a href="/pitches" target="_blank">Here</a>. Once your pitch gets approved and/or you claim an article pitch, a new draft will be started and become reachable through your writer dashboard under “Articles In Progress.” Most editor pitches have a deadline associated with it. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.
+    To start an article, either pitch your own topic (follow the guidelines <a href="/pages/content-policy" target="_blank">Here</a>), or choose from the existing editor pitches <a href="/pitches" target="_blank">Here</a>. Once your pitch gets approved and/or you claim an article pitch, a new draft will be started and become reachable through your writer dashboard under “Articles In Progress.” Most editor pitches have a deadline associated with it. Read more about deadlines <a href="/pages/writing-an-article#deadlines-and-extensions">here</a>.
   </p>
 
   <h3>Working on a Draft</h3>
@@ -24,8 +24,8 @@
 
   <h3 id="article-requirements">Article Requirements for Publication</h3>
   <p>The below questions are used by editors to determine if an article is ready for publication. Make sure that you can answer <b>Yes</b> to all these requirements before submitting for review.</p>
-  <h5>1. Does the topic meet The Teen Magazine's <a href="/content-policy">content policy</a>, and is the topic relevant to The Teen Magazine's audience?</h5>
-  <p>An article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. For more information, see <a target="_blank" href="/choosing-a-topic">Pitch Requirements</a>.</p>
+  <h5>1. Does the topic meet The Teen Magazine's <a href="/content-policy">content policy</a>, and Does the writing reflect the tone and voice of The Teen Magazine?</h5>
+  <p>An article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. For more information, see <a target="_blank" href="/pages/content-policy">Pitch Requirements</a>.</p>
   <h5>2. Is the title searchable and/or shareable?</h5>
   <p>A title is shareable if it is interesting and can reasonably spark curiosity and/or some other emotion. Some great examples of shareable titles are "How Dressing Like Blair Waldorf Helped Me Take My SATs," "The Stages of All High School Relationships from an Outsider," "Why You Might Find It Hard to Make Deep Friendships," while vague, non-specific titles such as "Loving Your Body" will not be approved. When crafting your title it can be useful to type it into the headline analyzer tool found here: <a href="https://aminstitute.com/headline/" target="_blank">https://aminstitute.com/headline/</a>. Nine times out of ten, a shareable title should have an Emotional Marketing Value (EMV) score over 30. However, this measure is a tool, not the rule. If the title is only a few words, this headline analyzer is not reliable and the title is likely too vague. Alternatively, a title is searchable if it contains keywords/phrases that would be reasonably typed into Google search. These titles are often questions, short responses, lists, etc. The topic should be specific enough that The Teen Magazine can come up in Google search. For example, “Cutest High School Romance Movies That Will Make You Cry” includes the keyword phrase "High School Romance Movies" which is a lot more specific than just “Best Netflix Movies."</p>
   <h5>3. Does the thumbnail image fit the criteria?</h5>
@@ -41,7 +41,7 @@
   <h5>8. Is the article in-depth enough for this topic?</h5>
   <p>Editors use their best judgement to determine if the average reader will be satisfied given the information. List articles often should be longer (ie. giving 15+ examples rather than 5), however going more in-depth with each one can also suffice. As a rule of thumb, an article should be around 1000 words on <a href="https://wordcounter.net/" target="_blank">https://wordcounter.net/</a> but this is a guideline, not the rule. The most important thing is that the reader is given enough information in the article to have learned something new.</p>
   <h5>9. Do all the images fit the criteria?</h5>
-  <p>All images in your article be high quality, free from watermarks, relevant to the article, and found via the guidelines specified in <a href="https://www.theteenmagazine.com/finding-images" target="_blank">Image Policy</a>.</p>
+  <p>All images in your article be high quality, free from watermarks, relevant to the article, and found via the guidelines specified in <a href="https://www.theteenmagazine.com/pages/image-policy" target="_blank">Image Policy</a>.</p>
 
   <h3>Submitting a Draft</h3>
   <p>Once you are confident that your article meets all the <a href="#article-requirements">Article Requirements for Publication</a>, change your article's status to <b>Ready for Review</b> and <b>Save Changes</b>.
@@ -139,7 +139,7 @@
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
 
-  <p>Read "<a href="/finding-images">Image Policy</a>" Next →</p>
+  <p>Read "<a href="/pages/image-policy">Image Policy</a>" Next →</p>
 </div>
 
 <script type="text/javascript">
