--- a/app/views/pitches/_preview_pitch.html.erb
+++ b/app/views/pitches/_preview_pitch.html.erb
@@ -24,7 +24,7 @@
               <%= markdown pitch.requirements %>
             <% end %>
             <% if @pitch.deadline.present? %>
-              <p class="pitch_usr"><b>This pitch has a <%= @pitch.deadline %> week deadline. Read more about deadlines <a target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</b></p>
+              <p class="pitch_usr"><b>This pitch has a <%= @pitch.deadline %> week deadline. Read more about deadlines <a target="_blank" href="/pages/writing-an-article#deadlines-and-extensions">here</a>.</b></p>
             <% end %>
           </div>
           <div class="flex_child">
@@ -40,7 +40,7 @@
             <% else %>
               <div class="alert alert-info" role="alert">
                 <p class="m-0">
-                  The writer who pitched this topic has agreed to the image policy found <a target="_blank" href="/image-policy">here</a>. Please double check that the thumbnail image is attributed correctly and that the source fits the image policy found <a target="_blank" href="/finding-images">here</a> before submitting the article for review.
+                  The writer who pitched this topic has agreed to the image policy found <a target="_blank" href="/image-policy">here</a>. Please double check that the thumbnail image is attributed correctly and that the source fits the image policy found <a target="_blank" href="/pages/image-policy">here</a> before submitting the article for review.
                 </p>
               </div>
             <% end %>
