--- a/app/views/reviews/_editor_dashboard.html.erb
+++ b/app/views/reviews/_editor_dashboard.html.erb
@@ -3,7 +3,7 @@
     <div id="waiting--for--approval">
       <div class="dashboard--writer--flex--main pr-3">
                     <div class="alert alert-warning" role="alert">
-                Please note: Publishing an article that does not meet all of the <a target="_blank" style="text-decoration: underline;" href="/finding-images"><u>image policy</u></a> requirements and <a target="_blank" href="/choosing-a-topic"><u>content policy</u></a> requirements can result in your removal from the editor team. It is your responsibility to review it in depth and communicate the the Discord <b>#editor-chat</b> if there is anything that is unclear. Thank you!
+                Please note: Publishing an article that does not meet all of the <a target="_blank" style="text-decoration: underline;" href="/pages/image-policy"><u>image policy</u></a> requirements and <a target="_blank" href="/pages/content-policy"><u>content policy</u></a> requirements can result in your removal from the editor team. It is your responsibility to review it in depth and communicate the the Discord <b>#editor-chat</b> if there is anything that is unclear. Thank you!
               </div>
         <!-- Classic tabs -->
         <div class="classic-tabs">
