--- a/app/views/users/dashboard/_guidelines.html.erb
+++ b/app/views/users/dashboard/_guidelines.html.erb
@@ -1,29 +1,30 @@
+<p class="ms-3">Must Read Resources for New Writers:</p>
 <div class="guidelines">
   <div class="thelink">
-    <a href="/criteria">
+    <a href="/pages/content-policy">
     <div class="box foo G1 ">
-      <p>FAQ</p>
+      <p>1. Content Policy</p>
     </div>
     </a>
   </div>
   <div class="thelink">
-    <a href="/choosing-a-topic">
-      <div class="G2 box foo">
-        <p>Pitching an Article</p>
-      </div>
-    </a>
-  </div>
-  <div class="thelink">
-    <a href="/writing-the-perfect-article">
-      <div class="G3 box foo">
-        <p>Writing The Perfect Article</p>
-      </div>
-    </a>
-  </div>
-  <div class="thelink">
-    <a href="/finding-images">
+    <a href="/pages/image-policy">
       <div class="G5 box foo">
-        <p>Image Policy</p>
+        <p>2. Image Policy</p>
+      </div>
+    </a>
+  </div>
+  <div class="thelink">
+    <a href="/pages/pitching-an-article">
+      <div class="G2 box foo">
+        <p>3. Pitching an Article</p>
+      </div>
+    </a>
+  </div>
+  <div class="thelink">
+    <a href="/pages/writing-an-article">
+      <div class="G3 box foo">
+        <p>4. Writing an Article</p>
       </div>
     </a>
   </div>
