--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,7 +10,20 @@
     margin: 0px auto;
   }
   img {
+    display: block;
     max-width: 100%;
+    margin: 8px auto;
+  }
+  iframe {
+    max-width: 100%;
+    margin: 8px auto;
+    display: block;
+  }
+  a {
+    color: #4abeb6;
+    &:hover {
+      background-color: yellow;
+    }
   }
 }
 
