--- a/app/views/feedbacks/new.html.erb
+++ b/app/views/feedbacks/new.html.erb
@@ -1,6 +1,6 @@
 <div class="page skinny_wrapper wrapper_padding">
   <h3 class="text-left mt-4 ml-0 mb-4">New Feedback Field</h3>
-  <i style="background-color: #FCD04D">If you think the current editor form is missing a field that is commonly
+  <i style="background-color: yellow">If you think the current editor form is missing a field that is commonly
     given as a reason for rejecting an article, please add the new field here. Be as descriptive as possible
     while keeping the feedback generic so that it can be used for other articles. Remember that as soon as you save, the feedback form
     will be updated for all editors.</i>
