--- a/app/views/pages/criteria.html.erb
+++ b/app/views/pages/criteria.html.erb
@@ -14,15 +14,15 @@
   <p class="question">What images can I include? </p>
   <p>Please visit <a href="/image-requirements">Image Requirements</a>.</p>
   <p class="question">How do I include images? </p>
-  <p>Please visit <a href="/writing-the-perfect-article">Writing The Perfect Article</a>.</p>
+  <p>Please visit <a href="/pages/writing-an-article">Writing The Perfect Article</a>.</p>
   <p class="question">What should I write about? </p>
-  <p>Please Visit <a href="/choosing-a-topic">Pitching an Article</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
+  <p>Please Visit <a href="/pages/content-policy">Pitching an Article</a> or claim a pitch from <%= link_to("Editor Pitches", pitches_path) %>.</p>
   <p class="question">What if I want to write something that doesn't fit a category? </p>
   <p>If you want to pitch an article idea that doesn't fit a category, it might not be right for The Teen Magazine, but you can reach out to any one of the editors through the Discord group to ask about your idea.</p>
   <p class="question">What if I have a friend that wants to write for The Teen Magazine?</p>
   <p>That's great! Tell your friend to apply at <a href="http://www.theteenmagazine.com/apply">www.theteenmagazine.com/apply</a>. We will then review your friend's application and send her an email with her account if they're accepted.</p>
   <p class="question">How can I pitch an article idea? </p>
-  <p>Only editors can pitch article topics to the Unclaimed Pitches page but if you have your own article idea that you want to write, you can pitch the topic to our editors. Please follow the guide explained in <a href="/choosing-a-topic">Pitching an Article</a>.</p>
+  <p>Only editors can pitch article topics to the Unclaimed Pitches page but if you have your own article idea that you want to write, you can pitch the topic to our editors. Please follow the guide explained in <a href="/pages/content-policy">Pitching an Article</a>.</p>
   <p class="question">How can I become an editor?</p>
   <p>The application can be found on your writer dashboard once you've published at least one article. To have the best shot of being accepted, you should wait until after you've had at least three articles published. Please note that we want to keep our editor team small, so if you are not accepted the first time you apply,
     do not become discouraged. Stay active in the writer team and try again at a later date.</p>
@@ -34,7 +34,7 @@
     <circle cx="26" cy="26" r="25" fill="none"/>
     <path fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
-  <p>Read "<a href="/choosing-a-topic">Pitching an Article</a>" Next →</p>
+  <p>Read "<a href="/pages/content-policy">Pitching an Article</a>" Next →</p>
 </div>
 <script type="text/javascript">
   $(document).ready(function(){
