--- a/app/views/pages/editor_partials/_reviewing_pitches_content.html.erb
+++ b/app/views/pages/editor_partials/_reviewing_pitches_content.html.erb
@@ -11,7 +11,7 @@
 
 <h3 id="first-question">1. Does the topic meet The Teen Magazine's content policy and is it relevant for The Teen Magazine's audience?</h3>
 <p>
-  First and foremost, an article or pitch should not be approved if it does not meet The Teen Magazine's <a target="_blank" href="/choosing-a-topic">content policy</a>. It is your responsibility as an editor for The Teen Magazine to understand and uphold this policy.
+  First and foremost, an article or pitch should not be approved if it does not meet The Teen Magazine's <a target="_blank" href="/pages/content-policy">content policy</a>. It is your responsibility as an editor for The Teen Magazine to understand and uphold this policy.
 <p>
 <p>
   Second, an article is relevant to The Teen Magazine’s audience if it addresses a topic, experience, and/or problem that is felt by, or of interest to, some or most teens. It is not enough for the article to be of interest to some teens just because the topic has such a broad audience already. </p>
