--- a/app/views/pages/show.html.erb
+++ b/app/views/pages/show.html.erb
@@ -6,9 +6,18 @@
         <b><%= @category.name %></b>
     <% end %>
   </div>
-  <% if current_user %>
-    <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
-        <%= link_to "All Pages", pages_path, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
+  <p>Last updated <%= format_full_date(@page.updated_at) %>
+    <% if current_user.admin? %>
+    | <span style="color: gray">Viewed <%= @page.impressions %> times (admin only)</span>
+    <% end %></p>
+  <div id="page-content">
+    <%= markdown @page.content %>
+    <% if current_user %>
+      <div class="alert alert-info">
+        <p>If you have any questions about this page, you can ask your questions on <a href="https://discord.com/channels/1081601449550688286/1081607785642475620">Discord</a>.</p>
+      </div>
+      <div id="admin_links" style="border-top: 1px solid #E9E9E9;border-bottom: 1px solid #E9E9E9;text-align: center;padding: 1em 0;margin: 1em 0;margin-top: 0;">
+        <%= link_to "All Writer Resources", pages_path, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
         <% if (current_user.id.eql? @page.user_id) || current_user.is_manager_of_category(@page.category_id) %>
             <%= link_to 'Edit', edit_page_path(@page), style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
         <% elsif current_user.is_manager? %>
@@ -18,12 +27,6 @@
             <%= link_to "Delete", page_path(@page), method: :delete, data: {confirm: "Are you sure you want to delete this page?"}, style: "text-decoration: none;color: #9a9da4;margin: 0 1em;font-weight: 700;font-size: .8em;text-transform: uppercase;font-family: inherit;" %>
         <% end %>
     </div>
-  <% end %>
-  <p>Last updated <%= format_full_date(@page.updated_at) %>
-    <% if current_user.admin? %>
-    | <span style="color: gray">Viewed <%= @page.impressions %> times (admin only)</span>
-    <% end %></p>
-  <div id="page-content">
-    <%= markdown @page.content %>
+    <% end %>
   </div>
 </div>
