--- a/app/views/pitches/show.html.erb
+++ b/app/views/pitches/show.html.erb
@@ -11,9 +11,9 @@
   <% if @claimed_user.present? %>
     <p class="pitch_usr">Claimed by <%= link_to(@claimed_user.full_name, @claimed_user, class: "pitch_btn") %><%= ", #{date_to_words(@pitch.claimed_at)}" unless @pitch.claimed_at.nil? %></p>
   <% elsif (@pitch.status.eql? "Approved") && !(@pitch.is_interview? && @pitch.assign_to_user_id.nil?) %>
-    <p class="mb-3" style="background-color: #FCD04D; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>! You may claim it to start your draft.</p>
+    <p class="mb-3" style="background-color: yellow; display: inline-block;">This pitch was approved<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>! You may claim it to start your draft.</p>
   <% elsif @pitch.status.eql? "Rejected" %>
-    <p><span style="background-color: #FCD04D; padding: 5px 0;">This was pitch rejected<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>. Please <%= link_to "delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."} %> it and submit a new pitch that meets all the requirements as described <a target="_blank" href="/choosing-a-topic">here</a>.</span></p>
+    <p><span style="background-color: yellow; padding: 5px 0;">This was pitch rejected<% if @pitch.editor_id.present?%> by <%= link_to(@editor.try(:full_name), @editor) %><% end %>. Please <%= link_to "delete", pitch_path(@pitch), method: :delete, data: {confirm: "Are you sure you want to delete this pitch? This cannot be undone."} %> it and submit a new pitch that meets all the requirements as described <a target="_blank" href="/pages/content-policy">here</a>.</span></p>
     <p>Reason(s) for rejection:</p>
     <ul>
       <% if @pitch.rejected_topic %>
@@ -59,7 +59,7 @@
     <span class="badge badge-pill badge-info"><%= @pitch.following_level %> followers</span>
   <% end %>
   <% if @pitch.admin_notes.present? %>
-    <p><i style="background-color: #FCD04D;">Admin Notes: <%= @pitch.admin_notes %></i></p>
+    <p><i style="background-color: yellow;">Admin Notes: <%= @pitch.admin_notes %></i></p>
   <% end %>
   <div class="post_content">
     <%= markdown @pitch.description %>
@@ -86,7 +86,7 @@
     <%= markdown @pitch.requirements %>
   <% end %>
   <% if @pitch.deadline.present? %>
-    <p class="pitch_usr mt-3"><b>This pitch has a <%= @pitch.deadline %> week deadline. Read more about deadlines <a href="/writing-the-perfect-article#deadlines-and-extensions">here</a>.</b></p>
+    <p class="pitch_usr mt-3"><b>This pitch has a <%= @pitch.deadline %> week deadline. Read more about deadlines <a href="/pages/writing-an-article#deadlines-and-extensions">here</a>.</b></p>
   <% end %>
   <% if @claimed_user.nil? %>
     <%= form_for @post do |f| %>
@@ -111,7 +111,7 @@
         <% else %>
           <div class="alert alert-info" role="alert">
             <p class="m-0">
-              The writer who pitched this topic has agreed to the image policy found <a target="_blank" href="/image-policy">here</a>. Please double check that the thumbnail image is attributed correctly and that the source fits the image policy found <a target="_blank" href="/finding-images">here</a> before submitting the article for review.
+              The writer who pitched this topic has agreed to the image policy found <a target="_blank" href="/image-policy">here</a>. Please double check that the thumbnail image is attributed correctly and that the source fits the image policy found <a target="_blank" href="/pages/image-policy">here</a> before submitting the article for review.
             </p>
           </div>
         <% end %>
