--- a/app/views/users/dashboard/_new_writer.html.erb
+++ b/app/views/users/dashboard/_new_writer.html.erb
@@ -34,7 +34,7 @@
             <li class="<% if @has_completed_onboarding %>strikethrough<% end %>">Complete the onboarding process.</li>
             <li class="<% if @has_submitted_profile %>strikethrough<% end %>">Submit your profile.</li>
             <li class="<% if @has_claimed_pitch %>strikethrough<% end %>">Claim your first article pitch.</li>
-            <li class="<% if @has_read_resources %>strikethrough<% end %>">Read all of <a target="_blank" href="/choosing-a-topic" class="link_nrml underline" style="font-family: inherit;">Pitching an Article</a>, <a target="_blank" href="/writing-the-perfect-article" class="link_nrml underline" style="font-family: inherit;">Writing the Perfect Article</a>, and <a target="_blank" href="/finding-images" class="link_nrml underline" style="font-family: inherit;">Image Policy</a>.</li>
+            <li class="<% if @has_read_resources %>strikethrough<% end %>">Read and understand The Teen Magazine's <a target="_blank" href="/pages/content-policy" class="link_nrml underline" style="font-family: inherit;">Content Policy</a>, <a target="_blank" href="/pages/image-policy" class="link_nrml underline" style="font-family: inherit;">Image Policy</a>, <a target="_blank" href="/pages/pitching-an-article" class="link_nrml underline" style="font-family: inherit;">Pitching an Article</a>, and <a target="_blank" href="/pages/writing-an-article" class="link_nrml underline" style="font-family: inherit;">Writing an Article</a>.</li>
             <li class="<% if @has_submitted_first_draft %>strikethrough<% end %>">Submit your first draft.</li>
             <li class="<% if @has_published %>strikethrough<% end %>">Have a draft get approved for publication.</li>
           </ol>
@@ -96,6 +96,12 @@
         <br>
       </div>
       <div class="links mb-4">
+        <h5 href="/pages">Writer Resources:</h5>
+        <% @highlighted_pages.each do |page| %>
+          <%= link_to page.title, page, class: "link_grn" %><br>
+        <% end %>
+        <br>
+        <h5>Other Useful Links:</h5>
         <div <% if @show_onboarding %> data-step data-index="5" data-onboarding-content="Recommend a friend to The Teen Magazine here."<% end %>>
           <%= link_to("Invite a friend", "/writers/#{@user.slug}/invitations", class: "link_grn") %>
         </div>
