--- a/app/views/users/interviewers.html.erb
+++ b/app/views/users/interviewers.html.erb
@@ -8,7 +8,7 @@
     <% end %>
   </div>
   <% if @query.present? %>
-    <h2>Searching for interviewer... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+    <h2>Searching for interviewer... <span style="background-color: yellow"><%= @query %></span></h2>
   <% end %>
   <% @interviewers.each do | user | %>
       <% if user != nil %>
