--- a/app/views/users/share.html.erb
+++ b/app/views/users/share.html.erb
@@ -11,7 +11,7 @@
             <% end %>
           </div>
           <% if @query.present? %>
-            <h2>Search for draft... <span style="background-color: #FCD04D"><%= @query %></span></h2>
+            <h2>Search for draft... <span style="background-color: yellow"><%= @query %></span></h2>
             <br>
           <% end %>
           <% if @posts.present? %>
