--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -43,7 +43,7 @@ em {
 
 #selectable_content {
   #response_to_text_0 {
-    background-color: #fcd04d;
+    background-color: yellow;
   }
 }
 
@@ -333,10 +333,6 @@ br {
   }
 }
 
-iframe {
-  min-width: 300px !important;
-}
-
 .submit_btn:hover {
   cursor: pointer;
 }
@@ -369,20 +365,6 @@ iframe {
 
 .margin_top_20 {
   margin-top: 20px !important;
-}
-
-.ads_wrapper {
-  z-index: 600000;
-  max-width: 100%;
-  display: block;
-  .adsbygoogle {
-    margin: 0 auto;
-  }
-  ins,
-  iframe {
-    margin: 0 auto !important;
-    display: block !important;
-  }
 }
 
 .underline {
@@ -1502,13 +1484,6 @@ ol {
     .post_apply {
       padding: 0px !important;
       margin-bottom: 20px !important;
-      .ads_wrapper {
-        iframe {
-          max-width: 100%;
-          display: block;
-          margin: 0 auto !important;
-        }
-      }
       .contain_articles {
         padding: 0 30px;
         h3 {
